@@ -209,6 +209,7 @@ public:
     sigc::signal<void, gig::Region*>& signal_region_changed();
     sigc::signal<void, gig::DimensionRegion*>& signal_dimreg_to_be_changed();
     sigc::signal<void, gig::DimensionRegion*>& signal_dimreg_changed();
+    sigc::signal<void, gig::Sample*>& signal_sample_changed();
     sigc::signal<void, gig::Sample*/*old*/, gig::Sample*/*new*/>& signal_sample_ref_changed();
 
     sigc::signal<void, int/*key*/, int/*velocity*/>& signal_note_on();
@@ -239,6 +240,7 @@ protected:
     sigc::signal<void, gig::Region*> region_changed_signal;
     sigc::signal<void, gig::DimensionRegion*> dimreg_to_be_changed_signal;
     sigc::signal<void, gig::DimensionRegion*> dimreg_changed_signal;
+    sigc::signal<void, gig::Sample*> sample_changed_signal;
     sigc::signal<void, gig::Sample*/*old*/, gig::Sample*/*new*/> sample_ref_changed_signal;
 
     sigc::signal<void, int/*key*/, int/*velocity*/> note_on_signal;
